# cpp_lambda

./: CMakeLists.txt  README.md
chp1/: intro.cc  test_in_file0
chpt1/: CMakeLists.txt  intro.cc
chpt2/: person_filter_transform.cc  stl_avg.cc  string_trim.cc
chpt3/: callable.cc  counting_team_member.cc  lambda_test.cc
chpt4/: CMakeLists.txt  knuth_problem.cc  partial_application.cc
chpt5/: person_example.cc
chpt6/: lazy_val.cc
chpt7/: CMakeLists.txt  range_test.cc
common/: Person.h
